[package]
name = "vulkust"
version = "0.1.0"
authors = ["Hossein Noroozpour (Thany Hulixer) <hossein.noroozpour@gmail.com>"]
links = "vulkan-1"
build = "build.rs"
description = "Vulakn based game engine"
license = "GPL-1.0"

[dependencies]
#libc = "*"

[build-dependencies]


[lib]
name = "vulkust"
crate-type = ["dylib"]
