[package]
name = "vulkust"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
description = "Vulakn based game engine"
license = "MIT"
build = "build.rs"
readme = "../README.md"
keywords = ["game", "engine", "vulkan"]
categories = ["game-engines"]

[features]
directx12 = []
blank_gapi = [] # This is only for implementation template for future Graphic-APIs

[dependencies]
image = "*"
cgmath = "*"
libc = "*"
rusttype = "*"
gltf = { version = "*", features = ["extras", "default"] }
num_cpus = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "*", features = ["libloaderapi", "minwindef",  "windef",  "winerror", "wingdi",  "winuser"] }

[target.'cfg(any(target_os = "android", target_os = "macos", target_os = "ios", target_os = "linux"))'.dependencies]
bitflags = "*"

[target.'cfg(all(any(target_os = "macos", target_os = "ios"), debug_assertions))'.dependencies]
objc = { version = "*", features = ["exception", "verify_message"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "*"

[build-dependencies]
reqwest = "*"