[package]
name = "vulkust"
edition = "2018"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
description = "Vulakn based game engine"
license = "MIT"
build = "build.rs"
readme = "../README.md"
keywords = ["game", "engine", "vulkan"]
categories = ["game-engines"]

[dependencies]
image = "*"
cgmath = "*"
libc = "*"
rusttype = "*"
gltf = { version = "*", features = ["extras", "default"] }
num_cpus = "*"
rand = "*"
ash = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "*", features = ["libloaderapi", "minwindef",  "windef",  "winerror", "wingdi",  "winuser"] }

[target.'cfg(any(target_os = "android", target_os = "macos", target_os = "ios", target_os = "linux"))'.dependencies]
bitflags = "*"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = { version = "*", features = ["exception", "verify_message"] }

[features]
directx12 = [
    "winapi/basetsd", 
    "winapi/d3d12", 
    "winapi/dxgiformat", 
    "winapi/dxgi", 
    "winapi/dxgi1_3", 
    "winapi/dxgi1_4", 
    "winapi/dxgitype",
    "winapi/d3d12sdklayers", # TODO remove this in release mode
]
blank_gapi = [] # This is only for implementation template for future Graphic-APIs

[build-dependencies]
reqwest = "*"
tokio = "*"