[package]
name = "simple-game"
version = "0.1.0"
authors = ["Hossein Noroozpour (Thany Hulixer) <hossein.noroozpour@gmail.com>"]
description = "A simple game made by Vulkust game engine"
license = "MIT"

[features]
log = []
vulkan-debug = ["log"]
intensive-debug = ["log"]

[dependencies]
vulkust = { path = "../../vulkust" }

# [lib]
# name = "vulkust"
# crate-type = ["cdylib"]
