[package]
name = "android-empty-screen"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
description = "A simple game made by Vulkust game engine"
license = "GPL-1.0"

[dependencies]
vulkust = { path = "../../vulkust" }

[profile.release]
lto = true

[lib]
name = "app"
crate-type = ["cdylib"]
