[package]
name = "more-things"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
description = "A more things example for Vulkust game engine"
license = "MIT"

[dependencies]
vulkust = { path = "../../vulkust" }
rand = "*"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "main"
path = "src/main.rs"