[package]
name = "more-things"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
description = "A more things example for Vulkust game engine"
license = "MIT"

[dependencies]
vulkust = { path = "../../vulkust" }
# vulkust = { path = "../../vulkust", features = ["directx12"] }
rand = "*"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "main"
path = "src/main.rs"