[package]
name = "more-things"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
description = "A more things example for Vulkust game engine"
license = "MIT"

[dependencies]
vulkust = { path = "../../vulkust" }
# vulkust = { path = "../../vulkust", features = ["directx12"] } # in case you want a more unsatable engine!
# vulkust = { path = "../../vulkust", features = ["blank_gapi"] } # only for test of blank API
rand = "*"

[lib]
path = "src/lib.rs"
name = "main"
crate-type = ["staticlib"]

[[bin]]
name = "main"
path = "src/main.rs"