[package]
name = "simple-game"
version = "0.1.0"
authors = ["Hossein Noroozpour (Thany Hulixer) <hossein.noroozpour@gmail.com>"]
description = "A simple game made by Vulkust game engine"
license = "GPL-1.0"

[features]
log = []
vulkan-debug = ["log"]
intensive-debug = ["log"]

[dependencies]
vulkust = { path = "../../" }

[profile.release]
lto = true

# [lib]
# name = "vulkust"
# crate-type = ["cdylib"]
